--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,14 +10,15 @@ source:
     sha256: 6317fa9f1b4f12039ca68eab2d9c96d95930499d084f5802a02bb49c5fb1c88d
 
 build:
-    number: 0
-    script: python setup.py install --single-version-externally-managed --record=record.txt
+    noarch: python
+    number: 1
+    script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
 
 requirements:
-    build:
+    host:
+        - pip
         - python
         - setuptools
-
     run:
         - python
         - h5py
